After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772479 - Modeline parser does not consider Emacs js-indent-level variable
Modeline parser does not consider Emacs js-indent-level variable
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: libide
unspecified
Other Linux
: Normal minor
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-05 21:06 UTC by Martin Blanchard
Modified: 2016-10-05 21:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Simple implementation (863 bytes, patch)
2016-10-05 21:11 UTC, Martin Blanchard
committed Details | Review

Description Martin Blanchard 2016-10-05 21:06:46 UTC
The js-indent-level variable (eg. expensively used in gnome-shell code) is not supported by Builder's modeline parser.
Comment 1 Martin Blanchard 2016-10-05 21:11:12 UTC
Created attachment 337013 [details] [review]
Simple implementation
Comment 2 Christian Hergert 2016-10-05 21:45:01 UTC
Review of attachment 337013 [details] [review]:

LGTM