modelines: Add support for Emacs 'js-indent-level' variable

https://bugzilla.gnome.org/show_bug.cgi?id=772479